--- a/easyrate/src/main/res/layout/view_easy_rate.xml
+++ b/easyrate/src/main/res/layout/view_easy_rate.xml
@@ -42,7 +42,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/love_igamer"
+                    android:id="@+id/love_app"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_alignParentTop="true"
