--- a/easyrate/src/main/res/values/colors.xml
+++ b/easyrate/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="dim">#80000000</color>
     <color name="gray">#DDDDDD</color>
     <color name="white">#ffffff</color>
+    <color name="yellow">#FFD164</color>
 </resources>
